[package]
name = "listenbrainz-fresh-rss"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1", features = ["sqlite"] }
reqwest = { version = "0.11", features = ["json"] }
rocket = "0.5.0"
rss = { version = "2.0.6", features = ["validation"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37.0", features = ["time"] }
